# kuhl-haus-mdp-app

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.rst  CLAUDE.md  CONTRIBUTING.rst  LICENSE  README.md  app-entrypoint.sh  app.Dockerfile  package-lock.json  password.txt  py4web.Dockerfile  pyproject.toml  requirements-build.txt  requirements.txt  setup.cfg  update-changelog.sh
.github/: .gitignore
.github/workflows/: build-images.yml  codeql.yml  test-backend.yml  test-frontend.yml
apps/_default/: __init__.py  common.py  controllers.py  settings.py
apps/_default/api/: market_data.py
apps/_default/static/css/: no.css
apps/_default/templates/: app.html  grid.html  index.html  index_public_footer.html  index_user_footer.html  layout.html
apps/health/: __init__.py
apps/healthz/: __init__.py
client/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
client/src/: App.vue  Top.js  Top.vue  main.js
client/src/assets/: base.css  main.css
client/src/components/: AlertManager.vue  AlertSoundPicker.vue  DashboardGrid.vue  WidgetMenu.vue  WidgetWrapper.vue
client/src/components/__tests__/: AlertManager.spec.js  AlertSoundPicker.spec.js  DashboardGridColNum.spec.js  DashboardGridCoverage.spec.js  DashboardGridOperations.spec.js  DashboardGridUseConfig.spec.js  WidgetMenuAndWrapper.spec.js  WidgetWrapperCoverage.spec.js
client/src/components/widgets/: CandlestickChart.vue  CompanyNews.vue  DailyRangeAlerts.vue  EQV2CompanyCard.vue  EQV3CompanyCard.vue  EQV4CardPicker.vue  EQV4CompanyCard.vue  EQV4CompanyNewsCard.vue  EQV4HeroCard.vue  EQV4PrevCard.vue  EQV4SecEdgarCard.vue  EQV4SessionCard.vue  EQV4ShortCard.vue  EQV4StockSplitsCard.vue  EQV4TickerEventsCard.vue  EQV4TodayCard.vue  EQV4VolumeCard.vue  EnhancedQuote.vue  EnhancedQuoteV2.vue  EnhancedQuoteV3.vue  EnhancedQuoteV4.vue  GenericScannerTable.vue  NewsArticleModal.vue  NewsFeed.vue  NewsFeedFast.vue  NewsFeedV2.vue  Quote.vue  TVLiteChart.vue  TopGainers.vue  TopGappers.vue  TopVolume.vue  eqv2Utils.js  eqv3Utils.js
client/src/components/widgets/__tests__/: CandlestickChart.spec.js  CandlestickChartCoverage.spec.js  CompanyNews.spec.js  CompanyNewsCoverage.spec.js  DailyRangeAlerts.spec.js  DailyRangeAlertsCoverage.spec.js  EQV2CompanyCard.spec.js  EQV3CompanyCard.spec.js  EQV4CompanyNewsCard.spec.js  EQV4SecEdgarCard.spec.js  EQV4StockSplitsCard.spec.js  EQV4SubComponents.spec.js  EQV4TickerEventsCard.spec.js  EnhancedQuote.spec.js  EnhancedQuoteV2.spec.js  EnhancedQuoteV3.spec.js  EnhancedQuoteV3Coverage.spec.js  EnhancedQuoteV4.spec.js  EnhancedQuoteV4Cards.spec.js  EnhancedQuoteV4Coverage.spec.js  GenericScannerTable.spec.js  GenericScannerTableCoverage.spec.js  NewsArticleModal.spec.js  NewsFeed.spec.js  NewsFeedCoverage.spec.js  Quote.spec.js  QuoteCoverage.spec.js  TVLiteChart.spec.js  TVLiteChartCoverage.spec.js  TVLiteChartCoverage2.spec.js  TopGainers.spec.js  TopGainersCoverage.spec.js  TopGappers.spec.js  TopGappersCoverage.spec.js  TopVolume.spec.js  TopVolumeCoverage.spec.js
client/src/composables/: useConfig.js  useScannerLink.js  useWebSocketClient.js  useWidgetBus.js
client/src/composables/__tests__/: useConfig.spec.js  useScannerLink.spec.js  useWebSocketClient.spec.js  useWebSocketClientCoverage.spec.js  useWidgetBus.spec.js
client/src/constants/: alertSounds.js  linkColors.js
client/src/stores/: useAlertStore.js  useDashboardStore.js  useWidgetSettingsStore.js
client/src/stores/__tests__/: useAlertStore.spec.js
client/src/utils/: chartIndicators.js  parseShareCount.js
client/src/utils/__tests__/: chartIndicators.spec.js  parseShareCount.spec.js
tests/apps/: test_controllers_coverage.py  test_default_controllers.py  test_health.py  test_healthz.py  test_market_data.py
