[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kuhl-haus-mdp-app"
#dynamic = ["version"]
version = "0.1.0"
description = "Market data processing service control plane and web application"
authors = [
    { name = "Tom Pounders", email = "git@oldschool.engineer" },
]
readme = "README.md"
requires-python = "<3.13,>=3.9.21"
license-files = ["LICENSE.txt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python"
]
dependencies = [
    "py4web",
    "celery",
    "dataclasses-json",
    "dnspython",
    "fastapi",
    "gunicorn",
    "importlib-metadata",
    "numpy",
    "pandas",
    "plotly",
    "psycopg2-binary",
    "psutil",
    "pyOpenSSL",
    "python-dotenv",
    "requests",
    "uvicorn",
    "uvicorn-worker"
]

[project.urls]
Homepage = "https://github.com/kuhl-haus/kuhl-haus-mdp-app"
Documentation = "https://github.com/kuhl-haus/kuhl-haus-mdp-app/wiki"
Source = "https://github.com/kuhl-haus/kuhl-haus-mdp-app.git"
Changelog = "https://github.com/kuhl-haus/kuhl-haus-mdp-app/commits"
Tracker = "https://github.com/kuhl-haus/kuhl-haus-mdp-app/issues"

[project.optional-dependencies]
testing = [
    "setuptools",
    "pdm-backend",
    "pytest",
    "pytest-cov",
]

[tool.setuptools]
zip-safe = true
include-package-data = true
package-dir = {"" = "src"}
packages = {find = {where = ["src"], exclude = ["tests"]}}

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.pdm]
distribution = true
version = { source = "scm" }

[tool.pdm.build]
package-dir = "src"
includes = ["src/kuhl_haus"]

[tool.pytest.ini_options]
addopts = ["--verbose"]
norecursedirs = ["dist", "build", ".tox"]
testpaths = ["tests"]

[tool.devpi.upload]
no_vcs = 1
formats = ["bdist_wheel"]

[tool.flake8]
max_line_length = 88
extend_ignore = ["E203", "W503"]
exclude = [".tox", "build", "dist", ".eggs", "docs/conf.py"]

[tool.pyscaffold]
version = "4.6"
package = "app"
extensions = ["namespace"]
namespace = "kuhl_haus"
